# kp-ripgrep-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RECENT_NOTES_FIXES.md  pyproject.toml  simple_test.py  test_server_date_validation.py
.claude/: settings.local.json
src/rgrep_mcp/: __init__.py  config.py  ripgrep.py  server.py
tests/: __init__.py  test_max_results.py  test_path.py  test_recent_notes_fixes.py  test_scope_issues.py  test_search.py  test_server_date_validation.py  test_smart_context.py  test_unicode.py
