[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgrep-mcp"
version = "1.0.0"
description = "Intelligent Obsidian vault search for Claude - find notes, connections, and insights with context-aware results"
authors = [{name = "Kirill Petrovsky", email = "kpetrovsky@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["obsidian", "search", "mcp", "claude", "knowledge-management", "pkm", "notes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/kpetrovsky/kp-ripgrep-mcp"
"Repository" = "https://github.com/kpetrovsky/kp-ripgrep-mcp"
"Issues" = "https://github.com/kpetrovsky/kp-ripgrep-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
]

[project.scripts]
rgrep-mcp = "rgrep_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100